src/test/ui/compare-method/reordered-type-param.stderr
error[E0053]: method `b` has an incompatible type for trait
  --> $DIR/reordered-type-param.rs:26:30
   |
17 |   fn b<C:Clone,D>(&self, x: C) -> C;
   |                             - type in trait
...
26 |   fn b<F:Clone,G>(&self, _x: G) -> G { panic!() } //~ ERROR method `b` has an incompatible type
   |                              ^ expected type parameter, found a different type parameter
   |
   = note: expected type `fn(&E, F) -> F`
              found type `fn(&E, G) -> G`

error: aborting due to previous error

